Strip delimiter handlers don't move strip correctly with keyboard input #38469

Closed
opened 2014-02-04 00:16:01 +01:00 by Paulo José Oliveira Amaro · 8 comments

System Information
Ubuntu 13.10 32-bit
Intel Ironlake Mobile x86/MMX/SSE

Blender Version
2.69.10 f70d966

Short description of error
When moving a strip with keyboard input by its both start and end handlers, the strip is not correclty changed until its moved also by mouse.

Exact steps for others to reproduce the error

  1. Start a new file and add an image strip to VSE.
  2. Select strip's start and end handlers. Type G to move it and type any significant value, maybe 20. The strip length is wrong.
  3. Now move the mouse, and the strip length gets fixed. If you apply the move without moving the mouse, you can't select the strip by clicking the "wrong part" of it.

Sometimes it's really hard to select the strip after move, because the final strip length become 1 frame only. And it can get worst when another strips are close to the moving one.

A animation:
{F75897 size=full}

  1. moving a strip by selecting it middle part: ok.
  2. moving a strip by its delimiters handles: bug.
System Information Ubuntu 13.10 32-bit Intel Ironlake Mobile x86/MMX/SSE Blender Version 2.69.10 f70d966 Short description of error When moving a strip with keyboard input by its both start and end handlers, the strip is not correclty changed until its moved also by mouse. Exact steps for others to reproduce the error 1. Start a new file and add an image strip to VSE. 2. Select strip's start and end handlers. Type G to move it and type any significant value, maybe 20. The strip length is wrong. 3. Now move the mouse, and the strip length gets fixed. If you apply the move without moving the mouse, you can't select the strip by clicking the "wrong part" of it. Sometimes it's really hard to select the strip after move, because the final strip length become 1 frame only. And it can get worst when another strips are close to the moving one. A animation: {[F75897](https://archive.blender.org/developer/F75897/blender-sequence-strip-moving-bug.gif) size=full} 1. moving a strip by selecting it middle part: ok. 2. moving a strip by its delimiters handles: bug.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro
Bastien Montagne self-assigned this 2014-02-04 08:30:50 +01:00

Right handle always gets updated after left one (this is also visible when moving mouse, though harder to detect)…

Right handle always gets updated **after** left one (this is also visible when moving mouse, though harder to detect)…

This issue was referenced by blender/blender-addons-contrib@b29bfd5daa

This issue was referenced by blender/blender-addons-contrib@b29bfd5daa6b6663f6cfad3bb8ac6e61a02861db

This issue was referenced by b29bfd5daa

This issue was referenced by b29bfd5daa6b6663f6cfad3bb8ac6e61a02861db

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b29bfd5daa.

Closed by commit b29bfd5daa.

This was VERY fast! :-D Thank you so much!

This was VERY fast! :-D Thank you so much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38469
No description provided.