Fix T38469: Strip delimiter handlers don't move strip correctly with keyboard input

Issue was in fact in strip update code when transforming, in case we move both left and right
handles the strip is handled twice in the loop, but it was always updated at the end of the
first loop only...